# hpp_ros_interface

./: CMakeLists.txt  package.xml
launch/: hpp-manipulation-server.launch  hpp.launch  hppcorbaserver.launch
msg/: PlanningGoal.msg  ProblemSolved.msg  ReadSubPath.msg
script/: test_client.py
scripts/: hpp_node.py  path_execution_fsm.py  smach_node.py
src/: CMakeLists.txt  hpp_ros.py
src/hpp/ros_interface/: client.py  hpp_server_initializer.py  planning_request_adapter.py  ros_tools.py  trajectory_publisher.py
src/hpp/ros_interface/manipulation/: hpp_server_initializer.py
src/hpp/ros_interface/smach_initializer/: __init__.py  play_path.py
src/hpp_ros/: __init__.py  client.py  hpp_server_initializer.py  planning_request_adapter.py  ros_tools.py  trajectory_publisher.py
src/hpp_ros/manipulation/: __init__.py  hpp_server_initializer.py
src/hpp_ros/smach_initializer/: play_path.py
srv/: PlugSot.srv  SetJointNames.srv
srv/hpp/corbaserver/problem/: hpp_corbaserver_problem_addGoalConfig.srv  hpp_corbaserver_problem_configAtParam.srv  hpp_corbaserver_problem_solve.srv
tests/: launch_smach.py
