<package format="2">
  <name>hpp_ros_interface</name>
  <version>0.0.0</version>
  <description>Bindings between hpp corba servers and ros</description>
  <maintainer email="hpp@laas.fr">Joseph Mirabel</maintainer>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dynamic_graph_bridge_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sot_hpp_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
</package>
